# physical-ai-textbook

./: .gitignore  BACKEND-FRONTEND-TEST-REPORT.md  BONUS-FEATURES-IMPLEMENTATION.md  BONUS-FEATURES-STATUS.md  BUILD-TEST-SUMMARY.md  CHATBOT-IMPLEMENTATION.md  CHATBOT-LOCATION-GUIDE.md  CHATBOT-VISIBILITY-FIX.md  COMPLETE-IMPLEMENTATION-SUMMARY.md  COMPLETE-UI-ENHANCEMENT.md  DEPLOY-INSTRUCTIONS.md  DEPLOYMENT.md  FEATURES-ACCESS-GUIDE.md  FEATURES-LOCATION.md  FINAL-IMPLEMENTATION-REPORT.md  FIXES-APPLIED.md  GITHUB-PAGES-DEPLOYMENT.md  IMPLEMENTATION-STATUS.md  LANGUAGE-SETUP.md  NEXT-STEPS.md  README.md  SPEC-KIT-PLUS-SETUP.md  START-SERVERS.md  SUCCESS-CRITERIA-VERIFICATION.md  TEST-STATUS.md  TEST-SUMMARY.md  TRANSLATION-CHATBOT-INTEGRATION.md  TRANSLATION-CHATBOT-TEST-RESULTS.md  UI-ENHANCEMENTS.md  UX-IMPROVEMENTS.md  docusaurus.config.ts  package.json  pnpm-lock.yaml  pyproject.toml.template  sidebars.ts
backend/: .env.example  .gitignore  COMPREHENSIVE-TEST-REPORT.md  DATA-UPLOAD-SUCCESS.md  EMBEDDING-FIXES.md  EMBEDDING-OPTIMIZATION.md  ENV-SETUP.md  ENV-STATUS.md  ENV-VERIFICATION.md  FINAL-TEST-REPORT.md  FIX-APPLIED.md  IMPLEMENTATION-COMPLETE.md  PERFORMANCE-NOTES.md  QUICK-START.md  QUICK-TEST.md  README.md  TEST-REPORT-FINAL.md  TEST-RESULTS.md  TEST-SUMMARY.md  TESTING.md  pyproject.toml  test_backend.sh  test_connection.py  test_embedding.py
backend/rag_chatbot_backend/: __init__.py
backend/scripts/: check_urdf.py  init_db.py  process_documents.py  test_urdf_search.py
backend/tests/: test_api.py  test_rag_flow.py  test_services.py
docs/: intro.md
(+104 files in other folders)
